@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T16:19:34Z",
+  "timestamp" : "2022-05-08T08:16:31Z",
   "count_outdated" : 16,
   "uniques_outdated" : 10,
-  "count" : 59,
-  "uniques" : 39,
+  "count" : 76,
+  "uniques" : 47,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 0, 7 ],
       "uniques": 6,
       "uniques_minmax": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ]
     }
   ]
 }
