@@ -1,6 +1,6 @@
 {
-  "count": 43,
-  "uniques": 13,
+  "count": 60,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 17,
+      "uniques": 8
     }
   ]
 }
